replaced collectors to list by to list